[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversation-viewer"
version = "1.0.0"
description = "Browse, search, and resume your Claude Code conversations -- from the browser or the terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "EazyApp Tech", email = "tech@eazyapp.com"},
]
keywords = ["claude", "claude-code", "conversation", "viewer", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/eazyapp-tech/claude-conversation-viewer"
Repository = "https://github.com/eazyapp-tech/claude-conversation-viewer"
Issues = "https://github.com/eazyapp-tech/claude-conversation-viewer/issues"

[project.scripts]
claude-conversations = "claude_conversation_viewer.web:main"
claude-conversations-cli = "claude_conversation_viewer.cli:main"

[tool.setuptools.packages.find]
include = ["claude_conversation_viewer*"]
