[metadata]
name = claude-conversation-viewer
version = 1.0.0
description = Browse, search, and resume your Claude Code conversations -- from the browser or the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = EazyApp Tech
author_email = tech@eazyapp.com
url = https://github.com/eazyapp-tech/claude-conversation-viewer
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include = claude_conversation_viewer*

[options.entry_points]
console_scripts =
    claude-conversations = claude_conversation_viewer.web:main
    claude-conversations-cli = claude_conversation_viewer.cli:main
